--- a/src/app/modules/customers/page/customers.component.html
+++ b/src/app/modules/customers/page/customers.component.html
@@ -20,8 +20,9 @@
         
         <div class="card">
             <p-table
-                [value]="customers"
+                [value]="(customers$ | async)"
                 [paginator]="true"
+                [columns]="cols"
                 [rows]="10"
                 [showCurrentPageReport]="true"
                 [tableStyle]="{ 'min-width': '50rem', 'min-height': '450px' }"
@@ -31,13 +32,14 @@
                 [scrollable]="true"
                 scrollHeight="450px"
             >
-                <ng-template pTemplate="header">
+                <ng-template pTemplate="header" let-columns>
                     <tr>
-                        <th style="width:min-content" pSortableColumn="personalId">Cedula <p-sortIcon field="code"></p-sortIcon></th>
+                        <th *ngFor="let col of columns">{{ col.header }}</th>
+                        <!-- <th style="width:min-content" pSortableColumn="personalId">Cedula <p-sortIcon field="code"></p-sortIcon></th>
                         <th pSortableColumn="personalId">Nombre <p-sortIcon field="name"></p-sortIcon></th>
                         <th style="width:min-content">Celular</th>
                         <th >Email</th>
-                        <th style="width:min-content">Acciones</th>
+                        <th style="width:min-content">Acciones</th> -->
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-customer>
@@ -46,14 +48,16 @@
                         <td>{{ customer.name + ' ' + customer.lastName }}</td>
                         <td>{{ customer.cellphone }}</td>
                         <td>{{ customer.email }}</td>
-                        <td class="table-action">
-                            <p-button icon="pi pi-pencil" styleClass="p-button-rounded p-button-info p-button-text"></p-button>
-                            <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text"></p-button>
+                        <td>
+                            <p-button icon="pi pi-pencil" styleClass="p-button-rounded p-button-info p-button-text" (onClick)="showDialog(customer)"></p-button>
+                            <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text" (onClick)="deleteCustomer(customer)"></p-button>
                         </td>
                     </tr>
                 </ng-template>
             </p-table>
         </div>
+
+        <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
 
 	</div>
 	
